
PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5198: streaming job stuck with script failure when combined with split (knoguchi)

PIG-5183: We shall mention NATIVE instead of MAPREDUCE operator in document (daijy)

PIG-5182: ant docs target is broken by PIG-5110 (daijy)

PIG-5156: Duplicate jars in CLASSPATH when running test (daijy)

PIG-5173: Script with multiple splits fails with Invalid dag containing 0 vertices (rohini)

PIG-5159: Fix Pig not saving grunt history (szita via rohini)

PIG-5127: Test fail when running test-core-mrtez (daijy)

PIG-5083: CombinerPackager and LitePackager should not materialize bags (rohini)

PIG-5087: e2e Native3 failing after PIG-4923 (knoguchi)

PIG-5073: Skip e2e Limit_5 test for Tez (knoguchi)

PIG-5072: e2e Union_12 fails on typecast when oldpig=0.11 (knoguchi)

PIG-3891: FileBasedOutputSizeReader does not calculate size of files in sub-directories (nkollar via rohini)

PIG-5070: Allow Grunt e2e tests to run in parallel (knoguchi)

PIG-5061: ant test -Dtestcase=TestBoolean failing (knoguchi)

PIG-5066: e2e Jython_Checkin_2 failing due to floating precision difference (knoguchi)

PIG-5063: e2e IOErrors_1 on mapreduce is unstable (knoguchi)

PIG-5062: Allow Native e2e tests to run in parallel (knoguchi)

PIG-5060: TestPigRunner.testDisablePigCounters2 failing with tez (knoguchi)

PIG-5056: Fix AvroStorage writing enums (szita via daijy)

PIG-5055: Infinite loop with join by fixed index (knoguchi)

PIG-5049: Cleanup e2e tests turing_jython.conf (Daniel Dai)

PIG-5033: MultiQueryOptimizerTez creates bad plan with union, split and FRJoin (rohini,tmwoordruff via rohini)
